<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:stateListAnimator="@animator/show_toolbar"
        android:animateLayoutChanges="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/plant_pic"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="none"/>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_btn_back"
                app:titleTextColor="?attr/colorOnSurface" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="?colorSurface"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cn_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/en_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/cn_name" />

            <TextView
                android:id="@+id/alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/plant_alias_name"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/en_name" />

            <TextView
                android:id="@+id/alias_names"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/alias" />

            <TextView
                android:id="@+id/brief_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/brief"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/alias_names" />

            <TextView
                android:id="@+id/brief"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/brief"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/brief_title"/>

            <TextView
                android:id="@+id/recognition_methods_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recognition_methods"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/brief" />

            <TextView
                android:id="@+id/recognition_methods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/brief"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/recognition_methods_title" />

            <TextView
                android:id="@+id/function_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/function"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/recognition_methods" />

            <TextView
                android:id="@+id/function"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/function"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/function_title" />

            <TextView
                android:id="@+id/last_update_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/last_update_time"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cn_name"
                app:layout_constraintTop_toBottomOf="@+id/function" />

            <TextView
                android:id="@+id/last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/last_update_time_title"
                app:layout_constraintTop_toTopOf="@+id/last_update_time_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
